--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Directorio</title>
 </head>
 <body>
-    <h1>Aqui va su nombre de ustedes</h1>
+    <h1>Diaz Jaime Juan Manuel</h1>
     <br>
     <h2>Primer Ejemplo</h2> 
     <a href="02HTML/index.html" >Enlace</a>
