--- a/Curriculum/curriculum.html
+++ b/Curriculum/curriculum.html
@@ -70,7 +70,7 @@
                     <td width="20%"><font size="4">CAR WASHER</font><br>Mexico <br> January 28th 2015 --- February 27th 2015</td><td align="center">TECHNO CAR <br> Car wash attendants wash, scrub and polish the exteriors of vehicles. They may also vacuum seats and carpets and clean door trims and hinges in the interior of vehicles.</td>
                 </tr>
                 <tr>
-                    <td> <font size="4">AIR HOSTESS</font> <br>Nigeria<br> November 28th 32 b.c. --- August 27th 1521 a.c</td><td align="center">NASA <br> astronauts currently work as scientists on the International Space Station—a laboratory that orbits Earth approximately 240 miles above the planet's surface. Astronauts on the station conduct scientific experiments such as innovative cancer research and research on the human body and living in space.</td>
+                    <td> <font size="4">Astronaut</font> <br>USA<br> August 27th 2018 --- November 13th 2018</td><td align="center">NASA <br> astronauts currently work as scientists on the International Space Station—a laboratory that orbits Earth approximately 240 miles above the planet's surface. Astronauts on the station conduct scientific experiments such as innovative cancer research and research on the human body and living in space.</td>
                 </tr>
             </table>
 
