--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <a href="03Loggin/loggin.html" >Enlace</a>
     <h2>Curriculum</h2>
     <a href="Curriculum/curriculum.html">Enlace</a>
+    <h2>Examen</h2>
+    <a href="08Examen/index.html">Enlace</a>
 </body>
 </html>
