--- a/08Examen/index.html
+++ b/08Examen/index.html
@@ -91,5 +91,9 @@
         </div>
     </div>
     <script src="js/validacion.js"></script>
+    <footer>
+        <p>Author: Díaz Jaime Juan Manuel<br>
+        <a href="mailto:diaz.jaime.juan.manuel@gmail.com">diaz.jaime.juan.manuel@gmail.com</a></p>
+    </footer>
 </body>
 </html>
