--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     <a href="Curriculum/curriculum.html">Enlace</a>
     <h2>Examen</h2>
     <a href="08Examen/index.html">Enlace</a>
+    <h2>Ejercicios Java</h2>
+    <a href="Problemas js/index.html">Enlace</a>
 </body>
 </html>
