--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <a href="08Examen/index.html">Enlace</a>
     <h2>Ejercicios Java</h2>
     <a href="Problemas js/index.html">Enlace</a>
+    <h2>Algoritmia</h2>
+    <a href="07AlgoritmiaJS/Algoritmia.html">Enlace</a>
 </body>
 </html>
