--- a/07AlgoritmiaJS/Algoritmia.html
+++ b/07AlgoritmiaJS/Algoritmia.html
@@ -148,10 +148,13 @@
                 style="margin-top: 1rem;" onclick="problema3()"  >Contar Letras</button>
                 <pre class="problema-output" 
                 id="p3-output" >Esperando datos ...</pre>
+                <a href="../index.html">Regreso al inicio</a>
             </div>
         </div>
 
     </div>
+
+    
     <script src="js/logica.js" ></script>
     
 </body>
